Fix : GET /post/{postId}/images 로직 수정